@@ -167,8 +167,7 @@ repository</a>.</p>
   <li>Validation for media queries, IRIs (against URI schemes), language tags,
     and so on.</li>
   <li>Documentations are missing for some features.</li>
-  <li><q>Whatpm</q> is a code name in fact.  Please let me know
-    if you have a better name.</li>
+  <li>XML parser<!-- with application cache selection algorithm hook-->.</li>
   <li>In addition, each module has its own TO DO items.
     (Search for <q>## TODO</q> and <q>## ISSUE</q> in each module.)</li>
 </ul>
