@@ -1,7 +1,7 @@
 1..1202
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Nov  4 12:50:40 2007
-# Current time GMT:   Sun Nov  4 03:50:40 2007
+# Current time local: Sun Nov  4 13:13:06 2007
+# Current time GMT:   Sun Nov  4 04:13:06 2007
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
