@@ -1,7 +1,7 @@
 1..980
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Nov  4 12:50:36 2007
-# Current time GMT:   Sun Nov  4 03:50:36 2007
+# Current time local: Sun Nov  4 13:12:54 2007
+# Current time GMT:   Sun Nov  4 04:12:54 2007
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
