@@ -1,5 +1,10 @@
 2007-11-04  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: Support for application cache selection algorithm
+	callback.
+
+2007-11-04  Wakaba  <wakaba@suika.fam.cx>
+
 	* mklinktypelist.pl: Support for rel=noreferer (HTML5 revision 1118).
 
 2007-10-17  Wakaba  <wakaba@suika.fam.cx>
